--- a/Laboratorium_2.ipynb
+++ b/Laboratorium_2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:1598add23981db8f008e73ce6b0bcbdfc3c54cbc5d9525734d76a789c05fd8e2"
+  "signature": "sha256:18b817f3007c94f112925ddddf43e88082c270c572c5abc69d1421bab3aa0836"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1883,7 +1883,7 @@
       "| \\W     | co\u015b innego ni\u017c litery i cyfry alfabetu \u0142aci\u0144skiego |\n",
       "| \\p{L}  | litery r\u00f3\u017cnych alfabet\u00f3w |\n",
       "| \\p{Lu} | du\u017ce litery r\u00f3\u017cnych alfabet\u00f3w |\n",
-      "| \\o{Ll} | ma\u0142e litery r\u00f3\u017cnych alfabet\u00f3w |"
+      "| \\p{Ll} | ma\u0142e litery r\u00f3\u017cnych alfabet\u00f3w |"
      ]
     },
     {
@@ -1947,10 +1947,36 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "p \"00-700\" =~ /\\d{2}-\\d{3}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 58,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
@@ -1965,10 +1991,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aaaaaaa\" =~ /a{3,}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -1982,10 +2020,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aaaaa\" =~ /a{2,4}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -2000,10 +2050,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aabbbcc\" =~ /ab*c*/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -2017,10 +2079,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aacc\" =~ /ab*c/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 23,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -2035,10 +2109,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aabbbcc\" =~ /ab+c+/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -2052,10 +2138,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"-5\" =~ /-?\\d+/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -2070,10 +2168,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"123\" =~ /-?\\d+/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -2108,10 +2218,25 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "nazwy = [\"00-700 Warszawa\", \"44-196 Knur\u00f3w\", \"43-300 Bielsko-Bia\u0142a\", \"91-474 \u0141\u00f3D\u017a\", \"30-383 krak\u00f3w\", \"11-11 Polska-Japonia\"]\n",
+      "wzorzec = /^\\d{2}\\s*-\\d{3}\\s*\\p{Lu}\\p{Ll}+([- ]\\p{Lu}\\p{Ll}+)?$/\n",
+      "nazwy.select{|nazwa| nazwa =~ wzorzec}\n",
+      "\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 60,
+       "text": [
+        "[\"00-700 Warszawa\", \"44-196 Knur\u00f3w\", \"43-300 Bielsko-Bia\u0142a\"]"
+       ]
+      }
+     ],
+     "prompt_number": 60
     },
     {
      "cell_type": "heading",
@@ -2145,10 +2270,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tekst = \"sia\u0142a baba mak\n",
+      "nie wiedzia\u0142a jak\"\n",
+      "tekst =~ /jak\\z/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 80,
+       "text": [
+        "29"
+       ]
+      }
+     ],
+     "prompt_number": 80
     },
     {
      "cell_type": "markdown",
@@ -2162,10 +2301,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"To kot, a to Ala\" =~ /^Ala/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 75
     },
     {
      "cell_type": "markdown",
@@ -2180,11 +2322,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\".split(/\\b/)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 30
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 79,
+       "text": [
+        "[\"Ala\", \" \", \"ma\", \" \", \"kota\"]"
+       ]
+      }
+     ],
+     "prompt_number": 79
     },
     {
      "cell_type": "markdown",
@@ -2199,10 +2352,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ania i Kasia\" =~ /i/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 76,
+       "text": [
+        "2"
+       ]
+      }
+     ],
+     "prompt_number": 76
     },
     {
      "cell_type": "markdown",
@@ -2216,10 +2381,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ania i Kasia\" =~ /\\bi\\b/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 81,
+       "text": [
+        "5"
+       ]
+      }
+     ],
+     "prompt_number": 81
     },
     {
      "cell_type": "heading",
@@ -2254,6 +2431,45 @@
       "fragment: tresc\n",
       "```"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "=begin\n",
+      "url = \"http://www.wp.pl:8080/aktualnosci/krakow/1112.html?id=5#tresc\"\n",
+      "protokol = /(http)([s]{0,1})/\n",
+      "puts \"Protok\u00f3\u0142: #{url.match protokol} \"\n",
+      "host = /w{2,3}([a-z.]+)/\n",
+      "puts \"host: #{url.match host}\"\n",
+      "port = /[0-9]{4}/\n",
+      "puts \"port: #{url.match port}\"\n",
+      "sciezka = /^\\//\n",
+      "puts \"sciezka: #{url.match sciezka}\"\n",
+      "=end\n",
+      "#wzorzec= /(?<protokol>[a-z]+):\\/\\/(?<d>[a-z.]+)(?<port>:\\d+)?\n",
+      "\n",
+      "require 'uri'\n",
+      "url=URI(\"http://www.wp.pl:8080/aktualnosci/krakow/1112.html?id=5#tresc\")\n",
+      "puts \"protok\u00f3\u0142: #{url.scheme}\\nhost: #{url.host}\\nport: #{url.port}\\n\u015bcie\u017cka: #{url.path}\\nzapytanie: #{url.query}\\nfragment: #{url.fragment}\"\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "protok\u00f3\u0142: http\n",
+        "host: www.wp.pl\n",
+        "port: 8080\n",
+        "\u015bcie\u017cka: /aktualnosci/krakow/1112.html\n",
+        "zapytanie: id=5\n",
+        "fragment: tresc\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
