--- a/Laboratorium_3.ipynb
+++ b/Laboratorium_3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:5a20314a26534d4bd964f9c4dff476f13fe30f7c5db01f6aad998fa05d7cea74"
+  "signature": "sha256:d685d97e3298d953cef51b6e062e6261b7eb23fcdda85a4aaf9860441a0da176"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -85,10 +85,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_napisow = [\"Ala\", \"ma\", \"kota\"]\n",
+      "tablica_napisow[0]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "\"Ala\""
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -104,10 +117,29 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "p tablica_liczb[5]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "nil"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -124,10 +156,30 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "puts tablica_liczb[0..1]\n",
+      "puts tablica_liczb[1..-1]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 3]\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[3, 5]\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -148,10 +200,53 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczba = [1,3,5]\n",
+      "p tablica_liczba\n",
+      "tablica_liczb[30] = 50\n",
+      "p tablica_liczb"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 3, 5]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 3, 5, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 50]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "[1, 3, 5, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 50]"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -168,11 +263,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "tablica_liczb[1..2] = [2,4,6]\n",
+      "tablica_liczb"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "[1, 2, 4, 6]"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -189,10 +297,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "tablica_liczb[1...1] = [2,4,6]\n",
+      "tablica_liczb"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "[1, 2, 4, 6, 3, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -207,10 +329,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "[]"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -225,10 +359,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new(5)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "[nil, nil, nil, nil, nil]"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -243,11 +389,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new(5,\"a\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "[\"a\", \"a\", \"a\", \"a\", \"a\"]"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -262,10 +419,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_napisow = %w(Ala ma kota)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "[\"Ala\", \"ma\", \"kota\"]"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -285,10 +454,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "('a'..'z').to_a[9..14]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "[\"j\", \"k\", \"l\", \"m\", \"n\", \"o\"]"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "heading",
